[package]
name = "play-net"
version = "0.1.0"
edition = "2021"

[[bin]] # chat
name = "chat"
path = "src/chat.rs"

[[bin]] # distributed key value store
name = "key-val-store"
path = "src/distributed-key-value-store.rs"

[[bin]] # file sharing
name = "fish"
path = "src/file-sharing.rs"

[[bin]] # ipfs pub sub
name = "ipfs-pubsub"
path = "src/ipfs-pubsub.rs"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros","tokio",
"gossipsub", "mdns","quic","kad", "request-response", "cbor", "rsa","pnet","identify"] }
futures = "0.3"
async-std = { version = "1.13", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
clap={ version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
either = "1.13"
dotenv = "0.15"